force-app/main/default/objects/Manage_Document__c/Manage_Document__c.object-meta.xml
<CustomObject>
    <label>Manage Document</label>
    <nameField>
        <displayFormat>MD-{00000}</displayFormat>
        <label>Manage Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manage Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>