force-app/main/default/objects/Manage_Document__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Application Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Application</fullName>
            </value>
            <value>
                <fullName>Solar Application</fullName>
            </value>
            <value>
                <fullName>Debit Consolidation</fullName>
            </value>
            <value>
                <fullName>Home Loan Refinance</fullName>
            </value>
            <value>
                <fullName>Home Purchase</fullName>
            </value>
            <value>
                <fullName>Generic Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>