force-app/main/default/objects/Manage_Document__c/fields/isBankStatment__c.field-meta.xml
<CustomField>
    <fullName>isBankStatment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isBankStatment</label>
    <type>Checkbox</type>
</CustomField>