force-app/main/default/objects/Manage_Document__c/fields/IsJoint__c.field-meta.xml
<CustomField>
    <fullName>IsJoint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsJoint</label>
    <type>Checkbox</type>
</CustomField>