force-app/main/default/objects/Manage_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document__c</columns>
    <columns>Category__c</columns>
    <columns>Application_Type__c</columns>
    <columns>isDefault__c</columns>
    <columns>IsJoint__c</columns>
    <columns>isBankStatment__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>